Fix sidebar visibility

--- a/client/src/styles/Sidebar.css
+++ b/client/src/styles/Sidebar.css
@@ -6,6 +6,6 @@
     left: 0;
     background-color: #fff;
     overflow-y: hidden;
-    padding-top: 30px;
+    padding-top: 15px;
     margin-right: 30px;
 }
